# Maskerad_GameEngine

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  appveyor.yml
blacksmith_core/: Cargo.toml
blacksmith_core/src/: clock.rs  engine_config.rs  game_directories.rs  game_infos.rs  lib.rs
blacksmith_core/src/engine_support_systems/: mod.rs
blacksmith_core/src/engine_support_systems/error_handling/: error.rs
blacksmith_core/src/engine_support_systems/system_interfaces/: filesystems.rs  loggers.rs  mod.rs
blacksmith_core/src/maths/: deg.rs  euler_angle.rs  mod.rs  point.rs
blacksmith_gameplay/: Cargo.toml
blacksmith_gameplay/src/: lib.rs
blacksmith_subsystems/: Cargo.toml
blacksmith_subsystems/src/: lib.rs
localization/en/: localization.json
localization/es/: localization.json
localization/fr/: localization.json
maskerad_animations/: Cargo.toml
maskerad_animations/src/: lib.rs
maskerad_audio/: Cargo.toml
maskerad_audio/src/: lib.rs
maskerad_core/: Cargo.toml
maskerad_core/src/: clock.rs  engine_config.rs  engine_config_error.rs  game_directories.rs  game_infos.rs  lib.rs  random.rs
maskerad_core/src/allocators/: errors.rs  mod.rs  stack_map.rs  stacks.rs
maskerad_core/src/engine_configuration/: engine_config.rs  mod.rs
maskerad_core/src/engine_support_systems/: mod.rs
maskerad_core/src/engine_support_systems/error_handling/: error.rs  mod.rs
maskerad_core/src/engine_support_systems/system_interfaces/: filesystems.rs  loggers.rs  mod.rs
maskerad_core/src/filesystem/: filesystem.rs  filesystem_error.rs  game_directories.rs  mod.rs  open_options.rs
maskerad_core/src/localization/: localization.rs  localization_error.rs  mod.rs
maskerad_core/src/maths/: basis.rs  decomposed.rs  deg.rs  euler_angle.rs  matrix.rs  mod.rs  ortho.rs  perspective.rs  perspective_fov.rs  point.rs  quaternion.rs  rad.rs  vector.rs
maskerad_debugging/: Cargo.toml
maskerad_debugging/src/: lib.rs
maskerad_front_end/: Cargo.toml
maskerad_front_end/src/: lib.rs
maskerad_gameplay/: Cargo.toml
maskerad_gameplay/src/: lib.rs
maskerad_gameplay_foundations/: Cargo.toml
maskerad_gameplay_foundations/src/: game_loop.rs  lib.rs
maskerad_independence_layer/: Cargo.toml
maskerad_independence_layer/src/: clock.rs  lib.rs
maskerad_independence_layer/src/filesystem/: filesystem.rs  game_directories.rs
maskerad_inputs/: Cargo.toml
maskerad_inputs/src/: lib.rs
maskerad_low_level_renderer/: Cargo.toml
maskerad_low_level_renderer/src/: lib.rs
maskerad_network/: Cargo.toml
maskerad_network/src/: lib.rs
maskerad_physics/: Cargo.toml
maskerad_physics/src/: lib.rs
maskerad_rendering_optimizations/: Cargo.toml
maskerad_rendering_optimizations/src/: lib.rs
maskerad_resource_management/: Cargo.toml
maskerad_resource_management/src/: lib.rs  resource_manager.rs  resource_manager_errors.rs
maskerad_resource_management/src/registries/: image_registry.rs  mod.rs  model_registry.rs  sound_registry.rs
maskerad_resource_management/src/resources/: gltf_registry.rs  image_resource.rs  mod.rs  model_resource.rs  ogg_registry.rs  refcount_registry.rs  resource_errors.rs  resource_manager_errors.rs  resources_registry.rs  sound_resource.rs  tga_registry.rs
maskerad_subsystems/: Cargo.toml
maskerad_subsystems/src/: lib.rs
maskerad_visual_effects/: Cargo.toml
maskerad_visual_effects/src/: lib.rs
src/: engine.rs  game.rs  kindred_engine.rs  lib.rs
src/core/: clock.rs  engine_config.rs  mod.rs  random.rs
src/core/engine_support_systems/: mod.rs  subsystem_management.rs  system_management.rs
src/core/engine_support_systems/data_structures/: mod.rs  system_context.rs
src/core/engine_support_systems/data_structures/threadpools/: filesystem_threadpool.rs  mod.rs
src/core/engine_support_systems/data_structures/threadpools/systems/filesystem/: filesystem_threadpool.rs  filesystem_threadpool_messages.rs  filesystem_worker.rs  filesystem_worker_messages.rs  mod.rs
src/core/engine_support_systems/error_handling/: error.rs  log_error.rs  mod.rs
src/core/engine_support_systems/system_management/: filesystems.rs  loggers.rs  mod.rs  system_types.rs
src/core/engine_support_systems/system_management/system_builders/: filesystem_builders.rs  logger_builders.rs  mod.rs
src/core/engine_support_systems/system_management/systems/: filesystems.rs  loggers.rs  mod.rs
src/core/math/: basis.rs  decomposed.rs  deg.rs  euler_angle.rs  matrix.rs  mod.rs  ortho.rs  perspective.rs  perspective_fov.rs  point.rs  quaternion.rs  rad.rs  random.rs  vector.rs
src/core/maths/: mod.rs  perspective_fov.rs  quaternion.rs
src/game_specific/: game.rs
src/systems/: filesystem.rs  log.rs  mod.rs  resource.rs
src/systems/rendering/: mod.rs
src/systems/system_builders/: filesystem_builder.rs  mod.rs
src/systems/system_implementations/: filesystem.rs  mod.rs
test_resources/engine_configuration/: test_config.toml  test_ser_config.toml
test_resources/images/: Untitled.tga
tests/: core_and_subsystems_integration.rs  filesystem_engineconfig.rs  filesystem_localization.rs  filesystem_resource_manager.rs  system_context_test.rs
