[package]
name = "blacksmith"
version = "0.1.0"
authors = ["Malkaviel - Maxime Capuano <maxime.capuano2@gmail.com>"]
publish = false #don't publish it for the moment
description = "Multithreaded 3D game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Malkaviel/Blacksmith.git"

[dependencies]
blacksmith_core = { path = "blacksmith_core"}
blacksmith_subsystems = { path = "blacksmith_subsystems"}
blacksmith_gameplay = { path = "blacksmith_gameplay"}

[workspace]