[package]
name = "maskerad_core"
version = "0.1.0" #don't forget to update html doc root
publish = false #don't publish for now
authors = ["Maskerad developers <maskerad-rs.organization@protonmail.com>"]
description = "The core systems of the maskerad game engine."
license = "MIT/Apache-2.0"
repository = "https://github.com/Maskerad-rs/Maskerad_GameEngine"
keywords = ["game-engine"]
categories = ["Game engines"]

[dependencies]
#The math library
cgmath = "~0.15"

#The RNG utility
rand = "~0.4"

#The stack allocators
maskerad_memory_allocators = "~5"

#TOML serialization/deserialization (for game engine configuration). Used with the maskerad filesystem to check a specific repository.
toml = "~0.4"

#MessagePack serialization/deserialization (for data transmission over the network).
rmp = "~0.8"

#csv serialization/deserialization
#csv = "~0.15"

#logging and debug printing (interface). Use fern (in executable program) for actual implementation.
log = "~0.4"

# The asynchronous network and filesystem I/O stuff (tokio, futures, mio...)