[package]
name = "maskerad_independence_layer"
version = "0.1.0" #don't forget to update html doc root
publish = false #don't publish for now
authors = ["Maskerad developers <maskerad-rs.organization@protonmail.com>"]
description = "The platform independence layer of the maskerad game engine."
license = "MIT/Apache-2.0"
repository = "https://github.com/Maskerad-rs/Maskerad_GameEngine"
keywords = ["game-engine"]
categories = ["Game engines"]

[dependencies]
#The cross-platform and more convenient filesystem
maskerad_filesystem = { git = "https://github.com/Maskerad-rs/maskerad_filesystem" }

# The cross-platform threading library
rayon = "~1"

# The vulkan rust wrapper (If we want to add Metal support, we need a graphics wrapper).
vulkano = "~0.7"

# The HTTP stuff
# hyper = "~0.11"

# Time utility
time = "~0.1"

#remove_dir_all windows workaround
remove_dir_all = "~0.3"

#serde support for various structures
serde = { version = "~1.0", optional = true, features = ["derive"] }

#logging support
log = "~0.4"