[package]
name = "maskerad_independence_layer"
version = "0.1.0" #don't forget to update html doc root
publish = false #don't publish for now
authors = ["Maskerad developers <maskerad-rs.organization@protonmail.com>"]
description = "The platform independence layer of the maskerad game engine."
license = "MIT/Apache-2.0"
repository = "https://github.com/Maskerad-rs/Maskerad_GameEngine"
keywords = ["game-engine"]
categories = ["Game engines"]

[dependencies]
# The cross-platform threading library (with future support)
futures-cpupool = "~0.1"

# The vulkan rust wrapper (If we want to add Metal support, we need a graphics wrapper).
vulkano = "~0.7"

# The TCP/UDP stuff (with future support)
tokio = "~0.1"
tokio-io = "~0.1"
futures = "~0.1"

# The HTTP stuff
# hyper = "~0.11"

# Time utility
time = "~0.1"

#remove_dir_all Windows workaround
remove_dir_all = "~0.3"

#serde support for various structures (its not
serde = { version = "~1.0", optional = true, features = ["derive"] }

#logging support
log = "~0.4"