[package]
name = "maskerad_physics"
version = "0.1.0" #don't forget to update html doc root
publish = false #don't publish for now
authors = ["Maskerad developers <maskerad-rs.organization@protonmail.com>"]
description = "The physics/collisions module of the maskerad game engine."
license = "MIT/Apache-2.0"
repository = "https://github.com/Maskerad-rs/Maskerad_GameEngine"
keywords = ["game-engine"]
categories = ["Game engines"]

[dependencies]