[package]
name = "maskerad_resource_management"
version = "0.1.0" #don't forget to update html doc root
publish = false #don't publish for now
authors = ["Maskerad developers <maskerad-rs.organization@protonmail.com>"]
description = "Resource management module of the maskerad game engine."
license = "MIT/Apache-2.0"
repository = "https://github.com/Maskerad-rs/Maskerad_GameEngine"
keywords = ["game-engine"]
categories = ["Game engines"]

[dependencies]
# The resource manager module sits on top of the core systems.
maskerad_core = { path = "../maskerad_core" }

#gltf resources.
gltf = "~0.9"

#image resources.
imagefmt = "~4.0"

#ogg resources.
lewton = "~0.8"

#logging support
log = "~0.4"